force-app/main/default/objects/CB_Integration_Log__c/CB_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Platform Event and API call audit log</description>
    <label>CB Integration Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>CB Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>