force-app/main/default/objects/CB_Integration_Log__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>