force-app/main/default/objects/CB_Integration_Log__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value><value><fullName>Outbound</fullName><default>false</default><label>Outbound</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>