force-app/main/default/objects/CB_Integration_Log__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <label>Onboarding Application</label>
    <referenceTo>CB_Onboarding_Application__c</referenceTo>
    <relationshipLabel>CB Integration Logs</relationshipLabel>
    <relationshipName>CB_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>