force-app/main/default/objects/CB_Integration_Log__c/fields/Response_Summary__c.field-meta.xml
<CustomField>
    <fullName>Response_Summary__c</fullName>
    <label>Response Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>