force-app/main/default/objects/CB_Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Success</fullName><default>false</default><label>Success</label></value><value><fullName>Error</fullName><default>false</default><label>Error</label></value><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>