force-app/main/default/objects/CB_Integration_Log__c/listViews/All_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>All_Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Application__c</columns>
    <columns>API_Name__c</columns>
    <columns>Direction__c</columns>
    <columns>Status__c</columns>
    <columns>HTTP_Status__c</columns>
    <columns>Correlation_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Integration Logs</label>
</ListView>